@@ -13,6 +13,7 @@ It has been supported by the ANR (ANR-08-CORD-010)
 
 ----------------------------------------------------
 Version 1.06
+- 'save' message can now take an optional list of attributes to be saved
 - variables are now evaluated and expanded inside strings. 
   Thus interaction variables can now be passed as argument of javascript functions.
 - corrects musicxml-version output
